[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gfx/weapons/shears.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/shear_projectile.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
height = 44.0

[node name="ShearProjectile" type="Area2D"]
collision_layer = 2
input_pickable = false
monitorable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_ShearProjectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
